# medical_chatbot

./: .env.example  .gitignore  README.md  architecture_visualization.py  pyproject.toml  test_tool.py
backend/: __init__.py  agent.py  config.py  main.py  model.py  model_factory.py  pdf_parser.py  pmc_tool.py  requirements.md
backend/providers/: __init__.py  base.py  local.py  openai.py
frontend/: app.py
frontend/.streamlit/: config.toml
gcp_infra/: main.tf
tests/: test_agent_nodes.py  test_basic.py
